@@ -1,5 +1,6 @@
 plugins {
     id("java")
+    application
 }
 
 group = "stretz.loom"
@@ -9,11 +10,10 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
 }
 
-tasks.getByName<Test>("test") {
-    useJUnitPlatform()
+application {
+    mainClass.set("stretz.loom.Main")
 }
